<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wanderer</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="desc">Description</string>
    <string name="cont">Contribute</string>
    <string name="disc">Discover</string>
    <string name="map">Map</string>
    <string name="photos">Photos</string>
    <string name="list">List</string>
    <string name="submit">Submit</string>
    <string name="title_activity_discovery">DiscoveryActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location">LocationActivity</string>

</resources>
