<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingBottom="0px"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingTop="0px"
    android:weightSum="1.0"
    tools:context=".Discover_List"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disc"
            android:id="@+id/disc"
            android:layout_weight=".5"
            android:background="#a35a1f"
            android:textColor="@android:color/white"
            />

        <Button
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cont"
            android:id="@+id/cont"
            android:layout_weight=".5"
            android:background="#e27d2b"
            android:textColor="@android:color/white"
            android:onClick="contClickedL"
            />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom">
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map"
                android:id="@+id/map"
                android:layout_weight=".5"
                android:background="#e27d2b"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:onClick="mapClickedL"
                />

            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photos"
                android:id="@+id/photos"
                android:layout_weight=".5"
                android:background="#e27d2b"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:onClick="photosClickedL"
                />
            <Button
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:id="@+id/list"
                android:layout_weight=".5"
                android:background="#a35a1f"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                />
            </LinearLayout>
</LinearLayout>
