<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:theme="@style/OrangeActionBarTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:paddingBottom="0px"
    android:paddingLeft="0px"
    android:paddingRight="0px"
    android:paddingTop="0px"
    android:weightSum="1.0"
    tools:context=".Discover_Map">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <Button
            android:id="@+id/discButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="#a35a1f"
            android:onClick="_disc"
            android:text="@string/disc"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/contButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="#e27d2b"
            android:onClick="_cont"
            android:text="@string/cont"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/middle_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bot"
        android:layout_below="@+id/top">

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/mapButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:onClick="_map"
            android:background="#a35a1f"
            android:text="@string/map"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/photosButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:background="#e27d2b"
            android:onClick="_photos"
            android:text="@string/photos"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/listButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".5"
            android:background="#e27d2b"
            android:onClick="_list"
            android:text="@string/list"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
